--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Work
 
 <div class="hero">
 	<hgroup class="wrapper">
-	  <h1 class="hero-name"><strong>Andrew Perry</strong> Blacksmithing, Engineering <span class="amp">&amp;</span> Historical Miscellany</h1>
+	  <h1 class="hero-name"><strong>Andrew Perry</strong> Blacksmithing, Engineering, <span class="amp">&amp;</span> Historical Miscellany</h1>
 	</hgroup>
 </div>
 
